fix hello hover on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -44,20 +44,24 @@ html, body {
   text-align: center;
   color: grey;
   font-size: 20px; }
-  @media screen and (max-width: 568px) {
+  @media screen and (max-width: 700px) {
     .email, .github, .linkedin, .portfolio {
       width: 24%;
       margin: 0 auto;
       display: block; } }
 
 .wrapper a {
-  color: grey; }
+  color: #000000;
+  font-family: "ProximaNova-Extrabold", sans-serif; }
 
 .green-hover:hover {
   color: #8DFAF1; }
 
 .white-hover:hover {
   color: #FFFFFF; }
+  @media screen and (max-width: 568px) {
+    .white-hover:hover {
+      color: #82FDAD; } }
 
 @font-face {
   font-family: 'ProximaNova-Extrabold';
